Tue Nov 11 18:02:56 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/TSS_T.cpp (ts_object): 

	  Added the change "Mon Nov 10 22:30:14 2003  Kobi Cohen-Arazi
	  <kobi@mivzak.com>"  back into the repo. The actual problem lay
	  elsewhere. Please see below.


	  The double checked locking optimization in ts_init () was the
	  culprit. After grabbing the lock, if the check for null pointer
	  fails, meaning it was aloready allocated, just return 0 instead
	  of a -1. 

Tue Nov 11 17:25:10 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/TSS_T.cpp:

	  Reverting the change "Mon Nov 10 22:30:14 2003  Kobi Cohen-Arazi
	  <kobi@mivzak.com>". The change is so benign that the problem is
	  elsewhere. Thic change just triggered something else. Reverting
	  this since our daily builds can run properly.

Tue Nov 11 12:20:14 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Fixed a bug in the implicitly generated dependencies where actual
          inter-project dependencies would be abandoned in favor of
          implicitly generated dependencies.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Make sure that PWD is set before it is used.

Tue Nov 11 17:09:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * bin/fuzz.pl:
          Added new check, check_for_makefile_variable, to verify that
          MAKEFILE variable is correct and that Makefile's not named just
          "Makefile" without an extension, have a MAKEFILE variable.  Added
          check for spaces around "=" to dependency file check.  Added
          makefiles to the ID check.

Tue Nov 11 15:45:23 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.inl:
          Added #include of ace/os_include/os_search.h to get bsearch and other
          search functions

        * ace/WFMO_Reactor.i:
          Added #include of ace/Thread.h
